chapter01-basic-knowledges/1.3-basic-kubernetes/02-run-nginx-with-k8s/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: basic-k8s
  labels:
    name: basic-k8s
    module: Namespace
