chapter01-basic-knowledges/1.3-basic-kubernetes/02-run-nginx-with-k8s/03-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: basic-k8s
  labels:
    name: ingress
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 8080
